--- a/Daniel_okyere_ShoppingCart_201105/styles.css
+++ b/Daniel_okyere_ShoppingCart_201105/styles.css
@@ -108,7 +108,7 @@ html, body{
 
 .cart-total-price {
     color: #333;
-    font-size: 1.1em;
+    font-size: 2.75em;
 }
 
 
@@ -122,4 +122,6 @@ html, body{
     display: flex;
     align-items: center;
     padding: 5px;
+    font-size: 2.5em;
+    font-weight: bold;
 }
