fixing cart updating in html

--- a/Daniel_okyere_ShoppingCart_201105/styles.css
+++ b/Daniel_okyere_ShoppingCart_201105/styles.css
@@ -36,8 +36,8 @@ html, body{
 }
 
 .main-header{
-    background-color: rgba(0, 0, 0, 6);
-    background-image: url("/Daniel_okyere_ShoppingCart_201105/assets/images/snow1.jpg");
+    background-color: gray;
+    
     background-size: cover;
     padding-bottom: 30px;
 }
@@ -124,4 +124,69 @@ html, body{
     padding: 5px;
     font-size: 2.5em;
     font-weight: bold;
+}
+
+.cart-column{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 1.5em;
+}
+
+.main-nav {
+    text-align: center;
+    font-size: 1.1em;
+    font-weight: lighter;
+    border-bottom: 1px solid rgba(255, 255, 255, .3)
+}
+
+
+
+.nav ul {
+    margin: 0;
+}
+
+.nav li {
+    display: inline;
+}
+
+.nav a {
+    display: inline-block;
+    padding: .5em;
+    color: white;
+    text-decoration: none;
 }
