--- a/Daniel_okyere_ShoppingCart_201105/styles.css
+++ b/Daniel_okyere_ShoppingCart_201105/styles.css
@@ -86,6 +86,9 @@ html, body{
     color: white;
     
 }
+.content-section {
+    margin: 1em;
+}
 
 .cart-row{
     display: flex;
@@ -129,7 +132,7 @@ html, body{
 .cart-column{
     display: flex;
     align-items: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px;
     margin-right: 1.5em;
     padding-bottom: 10px;
     margin-top: 10px;
